--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="search_hint">Search Artists</string>
+    <string name="title_activity_top_track">Top 10 Tracks</string>
 </resources>
