--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Settings</string>
     <string name="search_hint">Search Artists</string>
     <string name="title_activity_top_track">Top 10 Tracks</string>
+    <string name="title_activity_top_tracks_main">TopTracksMainActivity</string>
 </resources>
